---------------------------------------------------------------------------------------------------
Version: 0.17.19
Date: 2019.11.24 
  Change:
    - Imersite battery ingredients
    - Rubber use in recipe
	- Menarite wafer ingredients
  Balanced:
    - Science materials ingredients
  Fixed:
    - Balanced k-computer recipe don't work as expect
---------------------------------------------------------------------------------------------------
Version: 0.17.18
Date: 2019.11.22
  Balanced:
    - Krastorio computer recipes
  Add:
    - Increase use of Menarite and Imersite
---------------------------------------------------------------------------------------------------
Version: 0.17.17
Date: 2019.11.21
  Balanced:
    - Science materials ingredients
---------------------------------------------------------------------------------------------------
Version: 0.17.16
Date: 2019.11.20
  Change:
    - Utility sciecne pack now speed require module
	- Ingredients of module
  Fix:
    - Unable to craft advanced battery cause of lithium are lock behide advanced tech
---------------------------------------------------------------------------------------------------
Version: 0.17.15
Date: 2019.11.19
  Change:
    - Science pack ingredients count now depent on settings in Krastorio
	- Ingredients of silicon wafer line
---------------------------------------------------------------------------------------------------
Version: 0.17.14
Date: 2019.11.17
  Change:
    - Ingredients of electronics group recipes
  Add:
    - New tier of wood production
---------------------------------------------------------------------------------------------------
Version: 0.17.13
Date: 2019.11.17
  Add:
	- Last game recipe to get more copper and iron 
  Change:
    - Ingredients of contruction kit and contruction package
---------------------------------------------------------------------------------------------------
Version: 0.17.12
Date: 2019.11.16
  Add: